# cheat-on-content-douyin-online

./: .dockerignore  .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  LICENSE  bt-nginx.conf  debug.bat  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  start_macos.sh  start_windows.bat
backend/app/: __init__.py  config.py  errors.py  main.py
backend/app/api/: admin.py  announcements.py  auth.py  benchmark.py  bump.py  calendar.py  comments.py  comments_fetch.py  experiments.py  health.py  init.py  invite.py  membership.py  migrate.py  monitors.py  notifications.py  persona.py  pipeline.py  points.py  predict.py  publish.py  publish_time.py  scripts.py  seed.py  settings.py  sse.py  status.py  tasks.py  virality.py
backend/app/db/: init_db.py  session.py
backend/app/middleware/: auth.py
backend/app/models/: __init__.py  announcement.py  dismissed_announcement.py  guide_status.py  invite_record.py  order.py  points_log.py  response.py  state.py  system_config.py  user.py  user_action.py
backend/app/services/: file_io.py  (+34 more)
backend/tests/: check_recharge.py  conftest.py  test_blind_principles.py  test_m3_services.py  test_m4_publish_retro.py  test_m5.py  test_new_features.py  test_predictor.py  test_scripts_default_space.py  test_scripts_regression.py  test_services.py  test_timezone_fix.py
cheat-on-content/: .gitkeep
data/: .cheat-state.json  notifications.json
data/.cheat-cache/: usage.jsonl
data/reports/: retro_20260612_235435.json  retro_20260613_005306.json
frontend/: package-lock.json  package.json  tsconfig.tsbuildinfo
(+34 files in other folders)
