[project]
name = "content-studio"
version = "0.1.0"
description = "基于 cheat-on-content 的爆款预测系统"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "structlog>=24.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "python-multipart>=0.0.9",
    "numpy>=1.26",
    "lightgbm>=4.0",
    "joblib>=1.4",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "ruff>=0.5",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "pre-commit>=3.7",
]

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
